# microservices_infra_practice

./: .gitignore  README.MD  docker-compose.yml
api/: Dockerfile  pyproject.toml  user_facing_api.py
api/app/: __init__.py
api/app/actions/: examples.py
api/app/configs/: __init__.py  base.py  dev_env.py.default
