[tool.poetry]
name = "api"
version = "0.1.0"
description = "User facing api"
authors = ["Marcelo Romagnoli <marce.romagnoli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
